# skill-validation-framework

./: .gitignore  .improvement-loop-state.yaml  README.md  SKILL.md  pyproject.toml  validation-report-cc-godmode.md  validation-report-clawsentinel.md
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: third-party-security-tools-research.md
scripts/: improvement_loop.py  self_validate.py  setup.py
src/skill_validation/: __init__.py  __main__.py  cli.py  concurrency.py  functional.py  test_runner.py
src/skill_validation/benchmark/: __init__.py  __main__.py
src/skill_validation/report/: __init__.py  sarif.py
src/skill_validation/security/: __init__.py  __main__.py  third_party.py
src/skill_validation/validation/: __init__.py  __main__.py
tests/: __init__.py  test_concurrency.py  test_sarif.py  test_third_party.py  test_validation.py
tests/fixtures/test_skill/: SKILL.md
tests/fixtures/test_skill/tests/: basic.yaml  errors.yaml
